[package]
name = "snowball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }

derivative = { version = "2", features = ["use_core"] }
rand = { version = "0.8.4", features = ["getrandom"] }

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-bw6-761 = { version = "0.4.0", default-features = false }
